# jupyenv

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  ROADMAP.md  _typos.toml  config.nix  default.nix  docker.nix  examples.nix  flake-module.nix  flake.nix  generate-directory.nix  generate-directory.sh  generate.sh  haskell-overlay.nix  jupyterlab.nix  kernels-test.nix  kernels.nix  mkdocs.yml  npm-deps.nix  npm-package.nix  overlay.nix  overrides.nix  pr_body.template  pr_body.txt  pyproject.toml  python-overlay.nix  shell.nix
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: Bug-Report.yaml  Feature-Request.yaml
.github/workflows/: build.yml  ci.yml  daily-test.yml  nix-flake.yaml  nix-linux.yml  nix-macos.yml  update-flake-lock.yml  update-poetry-lock.yml
dart-sass/: default.nix  source.json  update-dart-sass.sh
docs/: DETAILS.md  HOWTO.md  README.md  ROADMAP.md  TUTORIALS.md  getting-started.md  how-to.md  index.md  overrides.nix  pyproject.toml
docs/assets/logos/kernels/: copy-logos.sh
docs/blogs/: release-0.1.0.md
docs/community/: get-involved.md
docs/documentation/: developers.md  examples.md  getting-started.md  how-to.md  options.md  roadmap.md  tutorials.md
docs/img/logos/: copy-logos.sh
docs/javascripts/: home.js  options.js
docs/javascripts/modules/: options.js
docs/overrides/: blog.html  home.html  options.html  optionsContent.html
docs/python-scripts/: options.py
docs/sass/home/base/: _hero.scss  _index.scss  _orbit.scss
docs/stylesheets/: blog.css  home.css  options.css
example/: jupyterlab_blogpost.ipynb
example/C/: shell.nix
example/CPP/: shell.nix
example/Go/: shell.nix  test.ipynb
example/Haskell/: ihaskell_labextension.nix  shell.nix
example/Haskell/local-package/my-haskell-package/: default.nix  haskell-src.cabal
example/Javascript/: shell.nix  test.ipynb
example/Nix/: nix.ipynb  shell.nix
example/OCaml/: shell.nix  simple.ipynb
example/Python/: shell.nix  test.ipynb
example/Python/my-python-package/: pyproject.toml  setup.py
example/Python/poetry2nix/: README.md  pyproject.toml  shell.nix
example/R-IR/: iris.ipynb  shell.nix
example/R-Juniper/: shell.nix
example/Ruby/: shell.nix
example/Rust/: shell.nix  simple.ipynb
example/cities-wordcloud/: kernelWith.nix
example/flake/: devshell.nix  flake.nix
example/haskellR/: shell.nix
example/posts/: beijing.txt  berlin.txt  london.txt  paris.txt  tokyo.txt
examples/python/projectdir/mykernel/: pyproject.toml
extensions/: ihaskell_labextension.nix
extensions/jupyterlab-email/: default.nix
extensions/jupyterlab-system-monitor/: default.nix
extensions/jupyterlab-theme-solarized-dark/: default.nix
kernels/: README.md  ansible-kernel.nix  ckernel.nix  default.nix  example_bash.nix  example_c.nix  example_elm.nix  example_go.nix  example_haskell.nix  example_javascript.nix  example_julia.nix  example_nix.nix  example_ocaml.nix  example_postgres.nix  example_python.nix  example_r.nix  example_rust.nix  example_scala.nix  example_stable_python.nix  example_typescript.nix  example_zsh.nix  haskell.nix  ihaskell.nix  ipython.nix  iruby.nix  juniper.nix  python.nix
kernels/ansible/: default.nix  overrides.nix  pyproject.toml  test.py
kernels/ansible-kernel/: README.md  default.nix
kernels/available/bash/: default.nix  module.nix  overrides.nix  pyproject.toml
kernels/available/c/: default.nix  module.nix  overrides.nix  pyproject.toml
kernels/available/nix/: default.nix  module.nix  overrides.nix  pyproject.toml
kernels/available/zsh/: default.nix  module.nix  overrides.nix  pyproject.toml  test.ipynb
kernels/bash/: default.nix  overrides.nix
kernels/bash-kernel/: README.md  default.nix
kernels/c/: default.nix  overrides.nix  pyproject.toml  test.ipynb  test.py
kernels/ckernel/: README.md  default.nix
kernels/cpp/: default.nix  xeusCling.nix
kernels/elm/: default.nix  pyproject.toml  test.ipynb  test.py
kernels/go/: default.nix  test.ipynb  test.py
kernels/gophernotes/: README.md  default.nix
kernels/haskell/: test.py
kernels/ihaskell/: README.md  default.nix  test.ipynb  test.py
kernels/ijavascript/: README.md  default.nix  node-packages.nix
kernels/ijulia/: README.md  default.nix
kernels/inix/: README.md  default.nix
kernels/ipython/: README.md  default.nix  pyproject.toml  test.ipynb
kernels/irkernel/: README.md  default.nix
kernels/iruby/: Gemfile  README.md  default.nix  gemset.nix  generate.sh  shell.nix
kernels/javascript/: default.nix  test.ipynb  test.py
kernels/julia/: README.md  default.nix  logo-LICENSE.md  shell.nix  test.py
kernels/juniper/: README.md  default.nix
kernels/nix/: default.nix  test.py
kernels/ocaml/: README.md  default.nix  logo-LICENSE.md  result  test.ipynb
kernels/postgres/: default.nix  test.ipynb  test.py
kernels/python/: default.nix
kernels/r/: default.nix  test.py
kernels/ruby/: default.nix  test.ipynb  test.py
kernels/rust/: README.md  default.nix  test.ipynb
kernels/typescript/: composition.nix  default.nix  generate.sh  node-env.nix  node-packages.nix  overrides.nix  package-lock.json  package.json  test.py  tslab-version.patch
kernels/xeus-cling/: README.md  cling.nix  (+2 more)
lib/: base.nix  directory.nix  docker.nix  docs.nix  jupyter.nix  kernels.nix  overrides.nix  service.nix
modules/: common.nix  default.nix  kernel.nix  overlays.nix  poetry.nix
modules/kernels/c/: default.nix  module.nix  pyproject.toml
modules/kernels/postgres/: default.nix  module.nix  pyproject.toml
modules/kernels/zsh/: default.nix  module.nix  pyproject.toml
nix/: default.nix  disable-check-trash-on-darwin.patch  haskell-overlay.nix  nixpkgs-src.nix  nixpkgs.nix  overlay.nix  python-overlay.nix
nix/jupyter/: default.nix  pyproject.toml  test.nix
template/: README.md  default.nix  flake.nix  jupytext.nix  kernels.nix  lsp.nix  shell.nix
templates/preferWheels/python/: overrides.nix  pyproject.toml
tests/: custom-ihaskell.nix  default.nix  run-docker-tests.sh  run-full-tests.sh  run-tests.sh  run.py  shell.nix  test-kernel-path.nix  test-overlay.nix
(+253 files in other folders)
