[tool.poetry]
name = "jupyter-with-site-dev"
version = "0.1.0"
description = "Python packages for jupyterWith website."
authors = []

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "*"
mkdocs-material-extensions = "*"
flit_core = "^3.7.1"
setuptools = "*"

[tool.poetry.dev-dependencies]
# build systems for dependencies
hatchling = "^1.3.1"
setuptools = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
