[tool.poetry]
name = "jupyter-nix-kernel-ansible"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
ansible-kernel = "^1.0.0"
ansible = "^5.6.0"

[tool.poetry.dev-dependencies]
# build systems for dependencies
pbr = "^5.8.1"
flit_core = "^3.7.1"
hatchling = "^0.22.0"
jupyter-packaging = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
