[tool.poetry]
name = "jupyter-nix-kernel-ansible"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
elm_kernel = "^0.21.1"

[tool.poetry.dev-dependencies]
# build systems for dependencies

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
