[tool.poetry]
name = "jupyter"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.3.3"

# build systems for dependencies
hatchling = "^0.22.0"
flit_core = "^3.7.1"
jupyter-packaging = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
