[tool.poetry]
name = "jupyter-nix-kernel-nix"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
nix-kernel = { git = "https://github.com/GTrunSec/nix-kernel.git", branch = "master" }

[tool.poetry.dev-dependencies]
# build systems for dependencies

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
