[tool.poetry]
name = "jupyter-nix-kernel-zsh"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
zsh-jupyter-kernel = "^3.4"
ipykernel = "^6.14.0"

[tool.poetry.dev-dependencies]
flit_core = "^3.7.1"
hatchling = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
