[tool.poetry]
name = "jupyter-nix-kernel-c"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
ipykernel = "*"
jupyter_c_kernel = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
