[tool.poetry]
name = "jupyter-nix-kernel-postgres"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
postgres_kernel = "^0.2.2"

[tool.poetry.dev-dependencies]
# build systems for dependencies

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
